<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="20dp">

    <include layout="@layout/card_info_fragment" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:orientation="vertical"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@color/tab_background_select"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_check"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="20dp"
                android:src="@drawable/icon_right_normal"
                android:visibility="invisible"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/card_info_equipment_name"
                android:textColor="@color/white"
                android:textSize="@dimen/card_info_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1.0"
                android:text="@string/card_info_equipment_repertory"
                android:textColor="@color/white"
                android:textSize="@dimen/card_info_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/return_time"
                android:textColor="@color/white"
                android:textSize="@dimen/card_info_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/compensate_price"
                android:textColor="@color/white"
                android:textSize="@dimen/card_info_text" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/compensate_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/compensate_btn"
                android:textSize="@dimen/card_info_text"
                android:textColor="@color/white"
                android:background="@color/btn"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/return_rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/rent_btn"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>