<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="20dp">

    <include layout="@layout/card_info_fragment" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="1.0"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="@color/tab_background_select"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_check"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icon_right_normal"
                    android:visibility="invisible" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:text="@string/expense_card_no"
                    android:textColor="@color/white"
                    android:textSize="@dimen/card_info_text" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:text="@string/expense_goods"
                    android:textColor="@color/white"
                    android:textSize="@dimen/card_info_text" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:text="@string/expense_state"
                    android:textColor="@color/white"
                    android:textSize="@dimen/card_info_text" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:text="@string/expense_count"
                    android:textColor="@color/white"
                    android:textSize="@dimen/card_info_text" />

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_expense_order"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1.0"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="@color/tab_background_select"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:text="@string/expense_card_no"
                    android:textColor="@color/white"
                    android:textSize="@dimen/card_info_text" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:text="@string/expense_compensate_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/card_info_text" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:text="@string/expense_compensate_price"
                    android:textColor="@color/white"
                    android:textSize="@dimen/card_info_text" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:text="@string/expense_compensate_description"
                    android:textColor="@color/white"
                    android:textSize="@dimen/card_info_text" />

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_compensate_order"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:background="@color/white"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_expense_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="40dp"
                android:textColor="@color/status_use"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/tv_expense_total"
                android:layout_toLeftOf="@id/tv_expense_total"
                android:text="消费总计："
                android:textColor="@color/status_use"
                android:textSize="@dimen/card_info_text" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>